--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@johmun/vue-tags-input": "^2.1.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.1.0",
@@ -18,8 +19,11 @@
     "eslint-plugin-vue": "^6.0.1",
     "howler": "^2.1.2",
     "vue": "^2.6.10",
+    "vue-backtotop": "^1.6.1",
+    "vue-feather-icons": "^5.0.0",
     "vue-lodash": "^2.0.2",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-toasted": "^1.1.27"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
