--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.4",
-    "nodemon": "^2.0.0"
+    "nodemon": "^2.0.0",
+    "vue-loading-overlay": "^3.2.0"
   }
 }
