--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,16 @@
     "eslint": "^6.6.0",
     "eslint-plugin-vue": "^6.0.1",
     "howler": "^2.1.2",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-backtotop": "^1.6.1",
     "vue-feather-icons": "^5.0.0",
+    "vue-loading-overlay": "^3.2.0",
     "vue-lodash": "^2.0.2",
     "vue-router": "^3.1.3",
-    "vue-toasted": "^1.1.27"
+    "vue-toasted": "^1.1.27",
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
